# learn-llm

./: .env.example  .gitignore  .gitmodules  README.md  c2_2_analyze_text_quality.py  c2_4_handling_multilingual_code_mixed.py  pyproject.toml
crawl4ai/: 02_crawl_basic_config.py  03_crawl_using_llm_base.py  04_multi_url_concurrency.py  05_dynamic_content_example.py  06_crawl_medium_article.py  README.md  README_crawl_hướng_dẫn.md  README_medium_crawler.md  config_crawl.yaml  crawl_loigiaihay_hướng_dẫn.py  crawl_parallel_yaml.py  crawl_simple_hướng_dẫn.py  crawl_with_config.py  crawl_with_config_yaml.py  demo_parallel_crawl.py  demo_yaml_config.py  requirements.txt
docling/: parse_pdf.py  parse_pdf_improved.py  parse_pdf_with_latex.py  parsed_content.md  questions_data.json  questions_data_improved.json  questions_data_with_latex.json  questions_preview.html
evaluation/: evaluate.ipynb  evaluate.py
gemma3n/: [Gemma_3n]MatFormer_Lab.ipynb
opik/: 00_quickstart.ipynb  01_log_traces.ipynb  02_log_conversation.ipynb  10_evaluation_concept.ipynb
p1_introduction_and_data_preparation/: c1_introduction_to_llm_design_pattern.md  c2_data_cleaning_for_llm_training.md
preprocess-data/: c2_0_data_cleaning.md  c2_1_calculate_perplexity.py  c2_3_preprocess_text.py  c2_5_deduplication_strategies.py  c2_6_data_cleaning_pipeline.py  c2_7_data_validation.py  c3_0_data_augmentation.md
trl/: 00_quickstart.ipynb  01_dataset_format.ipynb  01_dataset_format.md  02_training_FQA.md  03_understand_logs.md  README.md  draft.md
unsloth/: .gitignore  EVALUATION_README.md  Gemma3N_4B_Conversation.ipynb  ISSUES_SUMMARY.md  README.md  continue_training.py  dataset_guide.ipynb  gemma_multimodal_qlora_finetuning.py  model_evaluation.py  quick_test.py  requirements.txt  run.sh  run_evaluation.sh  simple_evaluation.py  simple_evaluation_no_api.py  test_evaluation.py  (+1 more)
zenml/: 01_simple_ml_pipeline.py  02_ml_workflow.py  02_train_config.yaml  pyproject.toml  requirements.txt
(+181 files in other folders)
