[project]
name = "learn-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.6.3",
    "deepeval>=3.3.0",
    "docling>=2.41.0",
    "langdetect>=1.0.9",
    "nltk>=3.9.1",
    "opencv-python>=4.12.0.88",
    "pillow>=10.4.0",
    "pip>=25.1.1",
    "polyglot>=16.7.4",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "unidecode>=1.4.0",
    "unsloth>=2025.7.5",
]
