[project]
name = "zenml-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Ngo Hong Thai",email = "ngohongthai.uet@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
zenml = { version = "0.74.0", extras = ["server"] }
pandas = "^2.3.1"
scikit-learn = "^1.7.0"
matplotlib = "^3.10.3"
pyarrow = "^20.0.0"
openai = "^1.93.3"
ratelimit = "^2.2.1"
pgvector = "^0.4.1"
psycopg2-binary = "^2.9.10"
beautifulsoup4 = "^4.13.4"
unstructured = "^0.18.3"
numpy = "^2.3.1"
sentence-transformers = ">=3"
transformers = "^4.53.1"
litellm = "^1.74.0.post1"
tiktoken = "^0.9.0"
rerankers = {extras = ["flashrank"], version = "^0.10.0"}
datasets = "^4.0.0"
torch = "^2.7.1"
huggingface-hub = "^0.33.2"
elasticsearch = "^9.0.2"
tenacity = "^9.1.2"
langfuse = "^3.1.3"
pinecone = "^7.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
